--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ on: [push]
 name: CI
 
 jobs:
-  build:
+
+  build-rust:
     name: Rust project
     runs-on: ubuntu-latest
     steps:
@@ -18,3 +19,37 @@ jobs:
         with:
           command: build
           args: --release --all-features
+
+  build-docker:
+    name: Docker containers
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        bin: ["api", "cli"]
+    steps:
+      - name: Checkout 🛎
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx 🐳
+        uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers 💾
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-${{ matrix.bin }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.bin }}-buildx-
+      - name: Build 🔧
+        uses: docker/build-push-action@v2
+        with:
+          file: docker/${{ matrix.bin }}.Dockerfile
+          context: .
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+      -
+        # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache 🚚
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
