--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - name: Checkout 🛎
         uses: actions/checkout@v2
+      - name: Cache cargo packages 💾
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Setup Rust 🦀
         uses: actions-rs/toolchain@v1
         with:
