--- a/lgtm/Cargo.toml
+++ b/lgtm/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lgtm"
 version = "0.1.0"
-authors = ["Will Toher <will.toher.0@gmail.com>"]
+authors = ["Will Toher <will.toher.0@gmail.com>", "Bharat Middha <5100938+bmiddha@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
