--- a/lgtm/Cargo.toml
+++ b/lgtm/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-rand = "0.7.3"
+rand = { version = "0.7.3", features = ["wasm-bindgen"] }
+wasm-bindgen = "0.2.73"
