--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - name: Test projects 🧪
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
       - name: Build projects 🚧
         uses: actions-rs/cargo@v1
         with:
