--- a/.github/workflows/test-prod.yml
+++ b/.github/workflows/test-prod.yml
@@ -7,31 +7,26 @@ on:
   workflow_dispatch:
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           persist-credentials: false
       - name: Setup node 🔧
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "16"
           cache: "yarn"
           cache-dependency-path: tests/yarn.lock
-      - name: Setup playwright ⚙️
-        uses: microsoft/playwright-github-action@v1
-      - name: Setup playwright - browsers ⚙️
-        run: npx playwright install                                              
       - name: Install Dependencies 📦
-        run: |
-          pushd tests
-          yarn install
-          popd
+        working-directory: tests
+        run: yarn install
+      - name: Setup playwright ⚙️
+        working-directory: tests
+        run : yarn setup-playwright
       - name: Run Tests 🧪
-        run: |
-          pushd tests
-          yarn test
-          popd
+        working-directory: tests
+        run: yarn test
         env:
           TEST_URL: https://wilt00.github.io/lgtm
