--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 
-actix-web = "3.3"
-envy = "0.4"
-serde = "1.0"
+actix-web = "4.0.1"
+envy = "0.4.2"
+serde = { version = "1.0.136", features = ["derive"] }
 lgtm = { path = "../lgtm" }
 
 [dev-dependencies]
